--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
   <title>
-   Abhishek Verma - Personal Portfolio/Resume /New
+   Abhishek Verma - Personal Portfolio/Resume
   </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
