--- a/portfolio.html
+++ b/portfolio.html
@@ -138,7 +138,7 @@
         <div class="uk-container">
           <div class="uk-grid-collapse uk-child-width-expand@m" data-uk-grid>
             <div>
-              <div class="yb-my-profile-img uk-background-cover uk-background-norepeat uk-background-top-center" data-src="src/img/profile.jpg" data-uk-img data-uk-lightbox>
+              <div class="yb-my-profile-img uk-background-cover uk-background-norepeat uk-background-top-center" data-src="resume/profile.jpeg" data-uk-img data-uk-lightbox>
                
                   <span data-uk-icon="icon: play; ratio: 2"></span>
                   <span class="yb-my-intro-text">Introduction</span>
