--- a/portfolio.html
+++ b/portfolio.html
@@ -158,7 +158,7 @@
                   <p>
                     Hey, I am a full time student, I discovered my passion for programming and development when I was a 
                     sophomore in High School; It was then when it became clear what I wanted to
-                    do for a living. I am pursuing my career at the amazing Chandigarh
+                    do for a living. I have pursued my career at the amazing Chandigarh
                     University where I started my major in Computer Science(Bachelor of Engineering).
                     <br>
                     <br>
@@ -213,9 +213,10 @@
               </div>
             </div>
             <div>
+              
               <div class="yb-box-service">
                 <span class="uk-icon" data-uk-icon="icon: settings; ratio: 1.5"></span>
-                <h5>Content Writer</h5>
+                <h5>React Native Developer</h5>
               </div>
             </div>
           </div>
@@ -280,7 +281,7 @@
                       <h4 class="yb-section-title">Bachelor of Engineering in Computer Science</h4>
                       <span data-uk-icon="location"></span><strong>Chandigarh University, India</strong>
                       <div class="uk-text-small">
-                        <p>Currently pursuing my Bachelor's degree from most reknowned university and developing myself for better future. 
+                        <p> pursued my Bachelor's degree from most reknowned university and developed myself for better future. 
                           The university served me a lot of Exposure.
                         </p>
                       </div>
@@ -320,6 +321,20 @@
               </h2>
               <div class="yb-resume-list">
                 <ul class="uk-list uk-list-large uk-list-divider">
+                  <li>
+                    <div class="yb-resume-item">
+                      <div class="yb-resume-item-date">
+                        <div class="yb-resume-item-date-icon"> <span data-uk-icon="calendar"></span></div>
+                        <div class="yb-resume-item-date-text"><span>June 2024 (Present)</span></div>
+                      </div>
+                      <h4 class="yb-section-title">React Native Developer</h4>
+                      <strong>DevStory</strong>
+                      <div class="uk-text-small">
+                        <p>React Native Developer: Transforming Mobile Experiences with Cutting-Edge Solutions.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
                   <li>
                     <div class="yb-resume-item">
                       <div class="yb-resume-item-date">
@@ -391,15 +406,23 @@
                   <div>
                     <div class="yb-box-circle">
                       <div class="circle-progress " data-value="1">
-                        <strong>60<i>%</i></strong>
+                        <strong>70<i>%</i></strong>
                       </div>
                       <h5 class="yb-box-circle-title">Figma</h5>
                     </div>
                   </div>
                   <div>
                     <div class="yb-box-circle">
+                      <div class="circle-progress " data-value="1">
+                        <strong>80<i>%</i></strong>
+                      </div>
+                      <h5 class="yb-box-circle-title">React Native</h5>
+                    </div>
+                  </div>
+                  <div>
+                    <div class="yb-box-circle">
                       <div class="circle-progress " data-value="0.7">
-                        <strong>50<i>%</i></strong>
+                        <strong>70<i>%</i></strong>
                       </div>
                       <h5 class="yb-box-circle-title">Sketch</h5>
                     </div>
